--- a/statistics/project/projekt.Rmd
+++ b/statistics/project/projekt.Rmd
@@ -12,3 +12,17 @@ output:
 data = read.csv(".\\WA_Fn-UseC_-Telco-Customer-Churn.csv")
 dim(data)
 ```
+
+```{r divide_into_test_train}
+data$categorization = substr(data$customerID, 0, 4) > "2500"
+train <- data$categorization == TRUE
+data_train <- data[train,]
+data_test <- data[!train,]
+data_train = subset(data_train, select = -c(categorization, customerID))
+data_test = subset(data_test, select = -c(categorization, customerID))
+mean(data_test$MonthlyCharges)
+mean(data_train$MonthlyCharges)
+dim(data_train)[1] / dim(data_test)[1]
+dim(data_train)
+dim(data_test)
+```
